# desto

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  404.html  DOCKER_IMPLEMENTATION.md  DOCKER_INSTALL_WSL.md  Dockerfile  Dockerfile.pip  Dockerfile.simple  Makefile  README.md  SECURITY.md  VERSION_MANAGEMENT.md  docker-compose.no-redis.yml  docker-compose.yml  docker-start.sh  index.html  main.py  mkdocs.yml  pyproject.toml  simple_test.py  sitemap.xml  test_method_fix.py  test_script_detection.py
.github/workflows/: ci.yml  docker.yml  docs.yml  gitleaks.yml  mkdocs-deploy.yml  publish.yml
CODE_OF_CONDUCT/: index.html
CONTRIBUTING/: index.html
SECURITY/: index.html
cli/: index.html
community/CODE_OF_CONDUCT/: index.html
community/CONTRIBUTING/: index.html
community/SECURITY/: index.html
desto_scripts/: README.md
docker-examples/: README.md  demo-script.py
docs/: README.md  index.md  requirements-docs.txt
docs/evaluations/: redis-vs-sqlite-evaluation.md
docs/reference/: configuration.md
docs/user-guide/: cli.md  sqlite-persistence.md
pyproject/: index.html
scripts/: find_files.sh  mark_job_finished.py  mark_session_started.py  release.sh  start_scheduled_session.py  sync_readme_to_docs.py
search/: search_index.json
src/desto/: _version.py
tests/: docker-compose.test.yml  docker_test_utils.py  test_bug_fix_validation.py  test_cli_integration.py  test_cli_main.py  test_cli_session_manager.py  test_cli_sessions.py  test_core_regression.py  test_dashboard_integration.py  test_docker_compose.py  test_docker_integration.py  test_docker_timezone_fix.py  test_duplicate_session_validation.py  test_favorites_integration.py  test_favorites_manager.py  test_job_completion_comprehensive.py  test_job_status_logging_regression.py  test_logging_functionality.py  test_logging_integration.py  test_scheduled_jobs.py  test_scheduled_jobs_integration.py  test_service_manager.py  test_sessions.py  test_sessions_extra.py  test_sqlite_integration.py  test_sqlite_store.py  test_sqlite_ui.py  test_ui.py  test_ui_extra.py
(+33 files in other folders)
