[project]
name = "desto"
version = "0.1.2"
description = "tmux session manager"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipython>=9.2.0",
    "loguru>=0.7.3",
    "nicegui>=2.16.1",
    "pre-commit>=4.2.0",
    "psutil>=7.0.0",
    "pytest>=8.3.5",
    "twine>=6.1.0",
]

[project.scripts]
desto = "desto.app.dashboard:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
