[project]
name = "desto"
dynamic = ["version"]
description = "tmux session manager"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipython>=9.2.0",
    "loguru>=0.7.3",
    "nicegui>=2.16.1",
    "pre-commit>=4.2.0",
    "psutil>=7.0.0",
    "pytest>=8.3.5",
    "pytest-xdist>=3.2.0",
    "twine>=6.1.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "redis>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "requests>=2.31.0",
]

docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "pymdown-extensions>=9.0.0",
    "mkdocs-include-markdown-plugin>=6.0.0",
    "mkdocs-htmlproofer-plugin>=1.2.1",
]

[project.scripts]
desto = "desto.app.dashboard:main"
desto-cli = "desto.cli.cli:cli_main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/desto/_version.py"

[tool.ruff]
line-length = 150  # Increased to handle long UI strings and f-strings
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "D",  # pydocstyle (docstring conventions)
]
ignore = []

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
# Allow missing module docstrings / top-level items in tests and selected modules
"tests/*" = ["D100", "D101", "D102", "D103", "D104", "D105", "D106", "D107"]
"src/desto/__init__.py" = ["D104"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
